# tflite_runner

./: .gitignore  CMakeLists.txt  PROFILING.md  QUICKSTART.md  README.md  USAGE.md  build.sh  deploy.sh  run_example.sh  run_on_device.sh
.github/: copilot-instructions.md
include/: image_utils.h  npy_io.h  tflite_runner.h
src/: image_utils.cpp  main.cpp  npy_io.cpp  tflite_runner.cpp
tools/: README.md  analyze_output.py  benchmark.py  prepare_input.py
